<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CHAI CRM - Test Server</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="signinlabel">Sign In</string>
    <string name="loginResponse">The username/password combination is not valid</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="searcHint">Type here to filter&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="newcustomer">Add new Customer</string>
    <string name="nearbycustomer">Find Nearby Customers</string>
    <string name="editprofile">Edit Profile</string>
    <string name="markasinactive">Mark As Inactive</string>
    <string name="addnewcustomerlabel">Save and New Customer information</string>
    <string name="cancellabel">Cancel</string>
    <string name="updatelabel">Update</string>
    <string name="selectItem">Select Item</string>
    <string name="zinc">Zinc</string>
    <string name="ors">ORS</string>
    <string name="selectpromotion">Select Promotion</string>
    <string name="gpscoordinates">GPS Coordinates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="savecalldata">Save Sale</string>
    <string name="delete_string">Delete</string>
    <string name="sync">Syncronise</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for Customer</string>
    <string name="det_tell_me_whatyouknowaboutdiarrhea">
        Diarrhea is the passage of watery or loose stools (at least 3x over 24hrs)\nDiarrhea is
        usually spread through contaminated food or water\nDiarrhea is a
        leading cause of death in children in Uganda </string>
    <string name="det_doyouknowtheeffectdiarrheahasonthebody">Diarrhea can lead to increased loss of water and minerals in the body\nChildren can become dehydrated and die if they lose too much water\nChildren can become weaker and malnourished due to diarrhea</string>
    <string name="det_whatdoyouknowaboutors">ORS treats dehydration\nAfter each stool give 1L of clean water, mixed with 1 sachet of ORS\nDosage can change based on age of the child</string>
    <string name="det_whatdoyouknowaboutzink">Zinc helps the child recover quickly and improve appetite and growth\nGive to the child for the full 10 days\nDosage can change based on the age of the child
</string>
    <string name="det_whyshould_younot_use_antibiotics">Antibiotics should be used for bacterial infections only\nMost diarrhea cases are caused by viruses\nAntibiotics can make people sicker in the long term</string>
    <string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s meters.</string>
</resources>
